Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-06-10 (SVN):
    * libs/common: Added filenames.h with several macros and inlines to
      address pathname handling differences between different operating
      systems.
    * libs/timidity/timidity.c (mid_init): Include directory separator
      character when adding the path of the config file to the pathlist.
      Use the filename.h macros.
    * libs/timidity/common.c (open_file): Use the filename.h macros.
    * engine/h2shared/snd_timidity.c, snd_wildmidi.c (_InitHelper): Use
      the filename.h macros.

2012-06-05 (SVN):
    * sys_amiga.c (Sys_CopyFile): Replace FRead() and FWrite() calls by
      Read() and Write(). Check the success of ExamineFH().

2012-06-05 (SVN):
    * sys_amiga.c, sys_dos.c, sys_unix.c (Sys_CopyFile): Fixed flipped
      string args in error messages (ugh...)

2012-06-05 (SVN):
    * util_io.c (AMIGA, Q_mkdir): Fixed to return if we got a pointer.

2012-06-05 (SVN):
    * hwmaster/sys_amiga.c: Added missing timer initialization stuff, so
      that GetSysTime() can be used.

2012-06-05 (SVN):
    * utils: Renamed GetTime to COM_GetTime and Error to COM_Error so as
      not to run into possible clashes with any library functions (such
      as the case with Error and Amiga's proto/dos.h). Also replaced the
      calls to remove and rename by Q_unlink and Q_rename.

2012-06-05 (SVN):
    * sys_amiga.c: Added -sndahi to the clients' help strings.

2012-06-05 (SVN):
    * sys_amiga.c (Sys_Init): Removed 1ms Sys_Sleep after the timer init
      and inlined a 1us wait, instead. Added missing timer init stuff to
      hexenworld server and utils/cmdlib so that GetSysTime can be used.

2012-06-04 (SVN):
    * snd_ahi.c, sys_amiga.c: Changed several ULONG type usage into IPTR
      for 64 bits corectness.

2012-06-04 (SVN):
    * snd_timidity.c, snd_wildmidi.c (_InitHelper): Added kludge so that